--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header1 cid-rPVIkkkpYm" id="header16-1">
+<section class="engine"><a href="https://mobirise.info/b">create your own site for free</a></section><section class="header1 cid-rPVIkkkpYm" id="header16-1">
 
     
 
@@ -84,7 +84,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background1.jpg" alt="Mobirise">
+                        <img src="assets/images/mbr-816x459.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">Судебные споры с налоговой инспекцией</h4>
@@ -97,7 +97,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background2.jpg" alt="Mobirise">
+                        <img src="assets/images/mbr-816x527.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">Консультирование физических лиц</h4>
@@ -109,7 +109,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background3.jpg" alt="Mobirise">
+                        <img src="assets/images/mbr-816x526.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
