--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.co">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn">Главная</span></a>
+                        </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.co"></a>
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create your own site for free</a></section><section class="header1 cid-rPVIkkkpYm" id="header16-1">
+<section class="engine"><a href="https://mobirise.info/f">easy site maker</a></section><section class="header1 cid-rPVIkkkpYm" id="header16-1">
 
     
 
@@ -89,7 +89,7 @@
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">Судебные споры с налоговой инспекцией</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Помощь в возврате излишне взысканных налогов и взносов.</p>
+                            Помощь в возврате излишне взысканных налогов и взносов.<br></p>
                     </div>
                 </div>
             </div>
